--- a/mystyles.scss
+++ b/mystyles.scss
@@ -31,6 +31,13 @@ h1, h3 {
   color: $gray;
 }
   
-  
+.gray-bg {
+  background-color: rgba(166, 164, 161, 0.4);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 5px;
+  padding-left: 8px;
+  border-radius: 15px;
+}
   
   
