--- a/mystyles.scss
+++ b/mystyles.scss
@@ -6,7 +6,7 @@
 // Colors
 $light-teal: #68b0ac;
 $dark-teal: #243235;
-$cream: #f7f2e6;
+$cream: #F8F8F8;
 $gray: #212121;
 
 // Base Document Colors 
