--- a/mystyles.scss
+++ b/mystyles.scss
@@ -6,12 +6,12 @@
 // Colors
 $light-teal: #68b0ac;
 $dark-teal: #243235;
-$cream: #F8F8F8;
+$light-gray: #F8F8F8;
 $gray: #212121;
 
 // Base Document Colors 
 $navbar-bg: $dark-teal;
-$body-bg: $cream;
+$body-bg: $light-gray;
 
 /*-- scss:rules --*/
 
