--- a/mystyles.scss
+++ b/mystyles.scss
@@ -37,16 +37,31 @@ h1, h3 {
   color: $gray;
 }
 
+.custom-h1-light {
+  letter-spacing: 1px;
+  font-weight: 700;
+  font-size: 40px;
+  color: $light-gray;
+}
+
 .custom-h2-light {
   letter-spacing: 1px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 32px;
   color: $light-gray;
 }
 
+.custom-h4-light {
+  letter-spacing: 1px;
+  font-weight: 450;
+  font-size: 20px;
+  color: $light-gray;
+  margin-bottom: 2px;
+}
+
 .custom-p-light {
   letter-spacing: 1px;
-  font-weight: 350;
+  font-weight: 450;
   font-size: 14px;
   color: $light-gray;
 }
@@ -60,6 +75,121 @@ h1, h3 {
   border-radius: 15px;
 }
 
+.teal-bg-left {
+  background-color: $dark-teal;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 0 25px 25px 0;
+  position: relative; 
+  z-index: 2; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Center vertically */
+  align-items: center; 
+  margin-right: 40px;
+  transform: translateX(-100%); /* Start off-screen to the left */
+  transition: transform 0.2s, opacity 0.2s; /* Add smooth transitions for both transform and opacity */
+}
+
+/* CSS for the animation */
+.teal-bg-left.slide-in {
+  transform: translateX(0%); /* Move to the original position */
+  opacity: 1; /* Fade in */
+}
+
+.teal-bg-left p {
+  margin: 0 0; /* Add margin to separate the paragraphs */
+  display: block; /* Ensure the paragraphs display as block elements */
+}
+
+.custom-circle-headshot {
+  position: relative;
+  padding-top: 45px;
+  left: 23%;
+  z-index: 3; /* Place the image above the background */
+  transition: transform 0.2s; /* Add a smooth transition effect */
+}
+
+.custom-circle-headshot:hover {
+  transform: scale(1.1); /* Increase the size on hover (1.1 times the original size) */
+}
+
+/* Media query for desktop screens */
+@media (min-width: 768px) { /* Adjust the breakpoint to your preference */
+  .custom-circle-headshot {
+  left: 30%;
+  padding-top: 20px;
+  }
+}
+
+/* Style for the modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 3;
+  padding: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  text-align: center;
+  margin-top: 50px; /* Adjust this value to set the desired margin */
+}
+
+/* Style for the close button */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+/* Style for the modal content (the enlarged image) */
+.modal-content {
+  max-width: 50%; /* Adjust this value to make the modal narrower */
+  max-height: 50%; /* Adjust this value to make the modal shorter */
+  margin: 0 auto;
+}
+
+.teal-bg-right {
+  background-color: $dark-teal;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 25px 0 0 25px;
+  position: relative; 
+  z-index: 2; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  margin-left: 40px;
+  margin-top: 0px;
+  margin-bottom: 40px;
+  transform: translateX(100%); /* Start off-screen to the left */
+  transition: transform 0.2s, opacity 0.2s; /* Add smooth transitions for both transform and opacity */
+}
+
+/* Media query for desktop screens */
+@media (min-width: 768px) { /* Adjust the breakpoint to your preference */
+  .teal-bg-right {
+    margin-top: 100px;
+    margin-left: 0;/* Apply margin only on desktop screens */
+    margin-bottom: 10px;
+  }
+}
+
+/* CSS for the animation */
+.teal-bg-right.slide-in {
+  transform: translateX(0%); /* Move to the original position */
+  opacity: 1; /* Fade in */
+}
+
 .teal-bg {
   background-color: $dark-teal;
   padding-top: 20px;
@@ -67,6 +197,7 @@ h1, h3 {
   padding-right: 20px;
   padding-left: 20px;
   border-radius: 25px;
+  margin-top: 30px;
 }
 
 img.custom-banner {
@@ -74,6 +205,64 @@ img.custom-banner {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1; /* Add this line */
 }
-  
+
+.button-container {
+  display: flex;
+  justify-content: center; /* Center buttons horizontally */
+  align-items: center; /* Center buttons vertically */
+  margin-top: 25px;
+}
+
+.light-teal-button {
+  background-color: $light-gray;
+  color: $light-teal;
+  border: 2px solid $light-teal;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 25px; /* Add margin between buttons */
+  margin-left: 25px;
+}
+
+.light-teal-button:hover {
+  background-color: $light-teal; /* Change the fill color on hover */
+  color: $light-gray; /* Change the text color on hover */
+}
+
+/* Media query for mobile screens */
+@media (max-width: 768px) {
+  .button-container {
+    flex-direction: column; /* Stack buttons vertically on mobile */
+    text-align: center; /* Center button text on mobile */
+  }
+
+  .light-teal-button {
+    margin: 10px 0; /* Adjust margin for mobile spacing */
+  }
+}
+
+/* Apply rounded corners to the entire tabset panel */
+.panel-tabset {
+  border-radius: 10px; /* Adjust the radius to your preference */
+  overflow: hidden; /* Hide overflowing content within the panel */
+}
+
+/* Remove the default border from tab labels */
+.panel-tab {
+  border: none;
+}
+
+/* Apply a border to the active tab label with rounded corners */
+.panel-tab.active {
+  border: 2px solid $dark-teal; /* Replace with your desired border color */
+  border-radius: 10px 10px 0 0; /* Adjust the radius as needed */
+}
+
+ 
   
