coded graph of skills

--- a/mystyles.scss
+++ b/mystyles.scss
@@ -83,11 +83,12 @@ h1, h3 {
   
 .gray-bg {
   background-color: $mid-gray;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 5px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 8px;
   padding-left: 8px;
   border-radius: 15px;
+  margin-bottom: 20px;
 }
 
 .teal-bg-left {
