--- a/mystyles.scss
+++ b/mystyles.scss
@@ -9,6 +9,7 @@ $dark-teal: #243235;
 $light-gray: #F8F8F8;
 $gray: #212121;
 $mid-gray: #b9bdbe;
+//#84ad66
 
 // Base Document Colors 
 $navbar-bg: $dark-teal;
